p2/kube/app-one.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 8080

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
